# iceberg-explorer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  prd.json  progress.txt  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.opencode/skill/dev-browser/: package-lock.json
.opencode/skill/dev-browser/profiles/browser-data/: .org.chromium.Chromium.QlgC7j  Last Version  Local State
.opencode/skill/dev-browser/profiles/browser-data/Default/: DIPS  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
.opencode/skill/dev-browser/profiles/browser-data/Default/DawnGraphiteCache/: data_1  index
.opencode/skill/dev-browser/profiles/browser-data/Default/DawnWebGPUCache/: data_1  index
.opencode/skill/dev-browser/profiles/browser-data/Default/Extension Rules/: LOG
.opencode/skill/dev-browser/profiles/browser-data/Default/Extension Scripts/: LOG
.opencode/skill/dev-browser/profiles/browser-data/Default/Extension State/: LOG  LOG.old
.opencode/skill/dev-browser/profiles/browser-data/GrShaderCache/: data_0  data_1  index
.opencode/skill/dev-browser/profiles/browser-data/GraphiteDawnCache/: data_1  index
.opencode/skill/dev-browser/profiles/browser-data/ShaderCache/: data_0  data_1  data_2  index
.opencode/skill/dev-browser/profiles/browser-data/segmentation_platform/: ukm_db
scripts/: bootstrap_lakekeeper.py  prd.json  progress.txt  seed_data.py
scripts/ralph/: progress.txt
src/iceberg_explorer/: __init__.py  config.py  main.py  observability.py
src/iceberg_explorer/api/: __init__.py
src/iceberg_explorer/api/routes/: catalog.py  export.py  health.py  query.py  ui.py  utils.py
src/iceberg_explorer/catalog/: __init__.py  service.py
src/iceberg_explorer/models/: __init__.py  catalog.py  query.py
src/iceberg_explorer/query/: __init__.py  engine.py  executor.py  models.py
src/iceberg_explorer/templates/: base.html  index.html  query.html
src/iceberg_explorer/templates/partials/: namespace_children.html  namespace_tree.html  table_details.html
tasks/: prd-devcontainer-setup.md  prd-iceberg-explorer.md  prd-pyiceberg-catalog-integration.md
tests/: __init__.py  test_catalog.py  test_catalog_service.py  test_config.py  test_engine.py  test_executor.py  test_export.py  test_health.py  test_main.py  test_observability.py  test_query_api.py  test_ui.py
(+64 files in other folders)
